--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,50 @@
 /*font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif; */
+:root {
+  --primary-color: #ff7597;
+  --cta-color: #ff0266;
+  --heading: "Playfair Display", serif;
+  --body-font: "Poppins", sans-serif;
+}
 
 h1 {
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading);
+  color: var(--primary-color);
   font-weight: bold;
+  font-size: 96px;
 }
+
 p {
+  font-family: var(body-font);
+  font-weight: normal;
+}
+.hero {
+  background-color: #121212;
+  text-align: center;
+  padding: 160px 20px;
+}
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: white;
+  opacity: 87%;
+}
+.hero h2 {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+  color: white;
+  opacity: 87%;
+}
+.btn-branding {
+  background: var(--cta-color);
+  border-radius: 4px;
+  color: white;
+  opacity: 87%;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 27px;
+  padding: 15px 30px;
 }
