--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@ font-family: 'Poppins', sans-serif; */
   --cta-color: #ff0266;
   --heading: "Playfair Display", serif;
   --body-font: "Poppins", sans-serif;
+  --background-color: #24191c;
 }
 
 h1 {
@@ -25,10 +26,10 @@ p {
   font-weight: normal;
   font-size: 18px;
   line-height: 30px;
-  color: #121212;
+  color: var(--background-color);
 }
 .hero {
-  background-color: #121212;
+  background-color: var(--background-color);
   text-align: center;
   padding: 160px 20px;
 }
@@ -79,6 +80,39 @@ p {
 .project-description {
   padding: 120px 60px;
 }
+.about-hero h1 {
+  font-size: 96px;
+  color: white;
+  opacity: 87%;
+  line-height: 1;
+}
+.about-hero p {
+  font-family: var(--body-font);
+  color: white;
+  opacity: 87%;
+  font-size: 18px;
+}
+.about-hero h3 {
+  color: var(--primary-color);
+  font-family: var(--body-font);
+}
+.about-hero {
+  background-color: var(--background-color);
+  padding: 160px 20px;
+}
+.profile-picture {
+  border-radius: 50%;
+  max-width: 300px;
+}
+.about-hero h2 {
+  font-size: 18px;
+  font-family: var(--body-font);
+  color: white;
+  opacity: 87%;
+}
+.about-intro {
+  margin: 30px;
+}
 @media (max-width: 768px) {
   .project-description {
     padding: 0;
@@ -98,5 +132,15 @@ p {
     font-size: 24px;
     margin-bottom: -20px;
     font-weight: normal;
+  }
+  .about-hero h1 {
+    font-size: 52px;
+  }
+  .about-hero {
+    padding: 0;
+  }
+  .profile-picture {
+    display: block;
+    margin: 0;
   }
 }
